// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration Completion request returns all components and helpers when requesting completion items in a handlebars expression 1`] = `
Array [
  Object {
    "detail": "component",
    "kind": 7,
    "label": "another-awesome-component",
  },
  Object {
    "detail": "component",
    "kind": 7,
    "label": "my-awesome-component",
  },
  Object {
    "detail": "component",
    "kind": 7,
    "label": "nested/nested-component",
  },
  Object {
    "detail": "helper",
    "kind": 3,
    "label": "some-helper",
  },
  Object {
    "detail": "Ember",
    "kind": 3,
    "label": "action",
    "usableIn": Array [
      "MustachePath",
      "SubExpressionPath",
    ],
  },
  Object {
    "detail": "Ember 1.11.0",
    "kind": 3,
    "label": "component",
    "usableIn": Array [
      "BlockPath",
      "MustachePath",
      "SubExpressionPath",
    ],
    "version": "1.11.0",
  },
  Object {
    "detail": "Ember 1.13.0",
    "kind": 3,
    "label": "concat",
    "usableIn": Array [
      "MustachePath",
      "SubExpressionPath",
    ],
    "version": "1.13.0",
  },
  Object {
    "detail": "Ember",
    "kind": 3,
    "label": "debugger",
    "usableIn": Array [
      "MustachePath",
    ],
  },
  Object {
    "detail": "Ember 2.1.0",
    "kind": 3,
    "label": "get",
    "usableIn": Array [
      "MustachePath",
      "SubExpressionPath",
    ],
    "version": "2.1.0",
  },
  Object {
    "detail": "Ember",
    "kind": 3,
    "label": "if",
    "usableIn": Array [
      "BlockPath",
      "MustachePath",
      "SubExpressionPath",
    ],
  },
  Object {
    "detail": "Ember",
    "kind": 7,
    "label": "input",
    "usableIn": Array [
      "MustachePath",
    ],
  },
  Object {
    "detail": "Ember",
    "kind": 7,
    "label": "link-to",
    "usableIn": Array [
      "MustachePath",
    ],
  },
  Object {
    "detail": "Ember",
    "kind": 3,
    "label": "loc",
    "usableIn": Array [
      "MustachePath",
      "SubExpressionPath",
    ],
  },
  Object {
    "detail": "Ember",
    "kind": 3,
    "label": "log",
    "usableIn": Array [
      "MustachePath",
    ],
  },
  Object {
    "detail": "Ember",
    "kind": 3,
    "label": "mount",
    "usableIn": Array [
      "MustachePath",
    ],
  },
  Object {
    "detail": "Ember",
    "kind": 3,
    "label": "outlet",
    "usableIn": Array [
      "MustachePath",
    ],
  },
  Object {
    "detail": "Ember",
    "kind": 3,
    "label": "partial",
    "usableIn": Array [
      "MustachePath",
    ],
  },
  Object {
    "detail": "Ember",
    "kind": 3,
    "label": "render",
    "usableIn": Array [
      "MustachePath",
    ],
  },
  Object {
    "detail": "Ember",
    "kind": 7,
    "label": "textarea",
    "usableIn": Array [
      "MustachePath",
    ],
  },
  Object {
    "detail": "Ember",
    "kind": 3,
    "label": "unbound",
    "usableIn": Array [
      "MustachePath",
      "SubExpressionPath",
    ],
  },
  Object {
    "detail": "Ember",
    "kind": 3,
    "label": "unless",
    "usableIn": Array [
      "BlockPath",
      "MustachePath",
      "SubExpressionPath",
    ],
  },
]
`;

exports[`integration Completion request returns all routes when requesting completion items in a block link-to 1`] = `
Array [
  Object {
    "detail": "route",
    "kind": 17,
    "label": "nested.nested-route",
  },
  Object {
    "detail": "route",
    "kind": 17,
    "label": "test-route",
  },
]
`;

exports[`integration Completion request returns all routes when requesting completion items in an inline link-to 1`] = `
Array [
  Object {
    "detail": "route",
    "kind": 17,
    "label": "nested.nested-route",
  },
  Object {
    "detail": "route",
    "kind": 17,
    "label": "test-route",
  },
]
`;

exports[`integration Definition request returns the definition information for a belongsTo relationship 1`] = `
Array [
  Object {
    "range": Object {
      "end": Object {
        "character": 0,
        "line": 0,
      },
      "start": Object {
        "character": 0,
        "line": 0,
      },
    },
    "uri": "file:///path-to-tests/fixtures/full-project/app/models/model-a.js",
  },
]
`;

exports[`integration Definition request returns the definition information for a component in a template 1`] = `
Array [
  Object {
    "range": Object {
      "end": Object {
        "character": 0,
        "line": 0,
      },
      "start": Object {
        "character": 0,
        "line": 0,
      },
    },
    "uri": "file:///path-to-tests/fixtures/full-project/app/components/my-awesome-component.js",
  },
]
`;

exports[`integration Definition request returns the definition information for a hasMany relationship 1`] = `
Array [
  Object {
    "range": Object {
      "end": Object {
        "character": 0,
        "line": 0,
      },
      "start": Object {
        "character": 0,
        "line": 0,
      },
    },
    "uri": "file:///path-to-tests/fixtures/full-project/app/models/model-b.js",
  },
]
`;

exports[`integration Definition request returns the definition information for a helper in a template 1`] = `
Array [
  Object {
    "range": Object {
      "end": Object {
        "character": 0,
        "line": 0,
      },
      "start": Object {
        "character": 0,
        "line": 0,
      },
    },
    "uri": "file:///path-to-tests/fixtures/full-project/app/helpers/some-helper.js",
  },
]
`;

exports[`integration Definition request returns the definition information for a transform 1`] = `
Array [
  Object {
    "range": Object {
      "end": Object {
        "character": 0,
        "line": 0,
      },
      "start": Object {
        "character": 0,
        "line": 0,
      },
    },
    "uri": "file:///path-to-tests/fixtures/full-project/app/transforms/custom-transform.js",
  },
]
`;

exports[`integration Initialize request returns an initialize request 1`] = `
Object {
  "capabilities": Object {
    "completionProvider": Object {
      "resolveProvider": true,
    },
    "definitionProvider": true,
    "documentSymbolProvider": true,
    "textDocumentSync": 1,
  },
}
`;
